--- a/src/app.html
+++ b/src/app.html
@@ -6,6 +6,7 @@
 		<link href="https://fonts.googleapis.com/css2?family=Cabin:ital,wght@0,400..700;1,400..700&family=Jacquarda+Bastarda+9&family=Shadows+Into+Light&display=swap" rel="stylesheet">
 		<meta charset="utf-8" />
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
+		<title>Pretty Calendar CSSci</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		%sveltekit.head%
 	</head>
